Second Version, Added Server (node.js)

--- a/html/index.html
+++ b/html/index.html
@@ -28,14 +28,12 @@
 
 
 		<div id="main">
-			<div id="inside">
-				<div class="content">
-					<div>
+			<div id="wrapper">
+					<div id="LeftContent" class="Content">
 						<img src="res/1.png">
 					</div>
-					<div>
+					<div id="RightContent" class="Content">
 						<img src="res/1.png">
-					</div>
 				</div>
 			</div>
 		</div>
