Added css,html code, deleted js file to add after finish html and css

--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
 	<link rel="stylesheet" type="text/css" href="index_css.css">
-	<script type="text/javascript" src="index_js.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	
+	
 </head>
 	<body>
 		<div id="top" class="top">
@@ -16,10 +17,10 @@
 			</div>
 			<div id="topBar" class="top">
 				<ul>
-					<li><a href="#">OSAKA</a></li>
-					<li><a href="#">AUSTRAILIA</a></li>
-					<li><a href="#">ENGLAND</a></li>
-					<li><a href="#">U.S.A</a></li>
+					<li><a href="#" class="menu">OSAKA</a></li>
+					<li><a href="#" class="menu">AUSTRAILIA</a></li>
+					<li><a href="#" class="menu">ENGLAND</a></li>
+					<li><a href="#" class="menu">U.S.A</a></li>
 					<li><a href="#">COMMUNITY</a></li>
 				</ul>
 			</div>
@@ -29,11 +30,20 @@
 
 		<div id="main">
 			<div id="wrapper">
-					<div id="LeftContent" class="Content">
+				<div id="content01" class="content">
+					<div class="img" style="width:100px;height: 180px;">
 						<img src="res/1.png">
 					</div>
-					<div id="RightContent" class="Content">
-						<img src="res/1.png">
+				</div>
+				<div id="content02" class="content">
+					<div class="img">
+						<img src="res/1.png" >
+					</div>
+				</div>
+				<div id="content03" class="content">
+					<div class="img">
+						<img src="res/1.png" >
+					</div>
 				</div>
 			</div>
 		</div>
@@ -42,5 +52,9 @@
 		<div id="footer">
 				JeongSeongJin All Copyrights deserved
 		</div>
+
+
+	<script> 
+	</script>
 	</body>
 </html>
