Added base tag at idex.html,Rebuiled server.js

--- a/html/index.html
+++ b/html/index.html
@@ -5,15 +5,14 @@
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
 	<link rel="stylesheet" type="text/css" href="index_css.css">
-	
-	
+	<base href="/html">
 </head>
 	<body>
 		<div id="top" class="top">
 			<a href="index.html"><p id="logo">TravelA</p></a>
 			<div id="topMini" class="top">
-				<a href="/login.html">Login</a>
-				<a href="/resgister.html">Register</a>
+				<a href="/login">Login</a>
+				<a href="/resgister">Register</a>
 			</div>
 			<div id="topBar" class="top">
 				<ul>
