Added left float menu,resized content's width and height, got browser's width,and height by using window.innerWidth,window.innerHeight

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 			</div>
 			<div id="topBar" class="top">
 				<ul>
-					<li><a href="#" class="menu">OSAKA</a></li>
+					<li><a href="#" class="menu">JAPAN</a></li>
 					<li><a href="#" class="menu">AUSTRAILIA</a></li>
 					<li><a href="#" class="menu">ENGLAND</a></li>
 					<li><a href="#" class="menu">U.S.A</a></li>
@@ -28,6 +28,15 @@
 
 
 		<div id="main">
+			<div id="leftFloat">
+				<ul>
+					<li><a href="#" class="menu">JAPAN</a></li>
+					<li><a href="#" class="menu">AUSTRAILIA</a></li>
+					<li><a href="#" class="menu">ENGLAND</a></li>
+					<li><a href="#" class="menu">U.S.A</a></li>
+					<li><a href="#">COMMUNITY</a></li>
+				</ul>
+			</div>
 			<div id="wrapper">
 				<div id="content01" class="content">
 					<div class="img" style="width:100px;height: 180px;">
@@ -54,6 +63,8 @@
 
 
 	<script> 
+		var windowHeight = window.innerHeight;
+		var windowWidth = window.innerWidth;
 	</script>
 	</body>
 </html>
