--- a/html/login/login.html
+++ b/html/login/login.html
@@ -4,14 +4,14 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
-	<link rel="stylesheet" type="text/css" href="index_css.css">
-	<base href="/html">
+	<link rel="stylesheet" type="text/css" href="login_css.css">
+	<base href="/html/login">
 </head>
 	<body>
 		<div id="top" class="top">
 			<a href="index.html"><p id="logo">TravelA</p></a>
 			<div id="topMini" class="top">
-				<a href="login/login.html">Login</a>
+				<a href="/login">Login</a>
 				<a href="/resgister">Register</a>
 			</div>
 			<div id="topBar" class="top">
@@ -28,33 +28,26 @@
 
 
 		<div id="main">
-			<div id="leftFloat">
-				<ul>
-					<li><a href="#" class="menu">JAPAN</a></li>
-					<li><a href="#" class="menu">AUSTRAILIA</a></li>
-					<li><a href="#" class="menu">ENGLAND</a></li>
-					<li><a href="#" class="menu">U.S.A</a></li>
-					<li><a href="#">COMMUNITY</a></li>
-				</ul>
-			</div>
 			<div id="wrapper">
-				<div id="content01" class="content">
-					<div class="img" style="width:100px;height: 180px;">
-						<img src="res/1.png">
-					</div>
-				</div>
-				<div id="content02" class="content">
-					<div class="img">
-						<img src="res/1.png" >
-					</div>
-				</div>
-				<div id="content03" class="content">
-					<div class="img">
-						<img src="res/1.png" >
+					<div id="login">
+						<form action="/login_server.html" method="get">
+							<table border="0">
+								<tr>
+									<td>ID : </td>
+									<td><input type="text" size="10"></td>
+								</tr>
+								<tr>
+									<td>PASSWORD : </td>
+									<td><input type="password" size="10"></td>
+								</tr>
+								<tr>
+									<td><input type="submit" value="로그인"></td>
+								</tr>
+							</table>
+						</form>
 					</div>
 				</div>
 			</div>
-		</div>
 
 
 		<div id="footer">
@@ -66,8 +59,12 @@
 		var windowHeight = window.innerHeight;
 		var windowWidth = window.innerWidth;
 
+		$("#main").css("height",windowHeight);
 		$("#main").css("width",windowWidth);
+
+		$("#wrapper").css("height",windowHeight);
 		$("#wrapper").css("width",windowWidth*(8/10));
+
 
 	</script>
 	</body>
