Added login function by using post

--- a/html/login/login.html
+++ b/html/login/login.html
@@ -30,15 +30,15 @@
 		<div id="main">
 			<div id="wrapper">
 					<div id="login">
-						<form action="/login_server.html" method="get">
+						<form action="/login_server" method="post">
 							<table border="0">
 								<tr>
 									<td>ID : </td>
-									<td><input type="text" size="10"></td>
+									<td><input type="text" size="10" name="ID"></td>
 								</tr>
 								<tr>
 									<td>PASSWORD : </td>
-									<td><input type="password" size="10"></td>
+									<td><input type="password" size="10" name="PASSWD"></td>
 								</tr>
 								<tr>
 									<td><input type="submit" value="로그인"></td>
