Fixed that can't find direction of main page when click logo in login page

--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,9 @@
 </head>
 	<body>
 		<div id="top" class="top">
-			<a href="index.html"><p id="logo">TravelA</p></a>
+			<a href="/"><p id="logo">TravelA</p></a>
 			<div id="topMini" class="top">
-				<a href="login/login.html">Login</a>
+				<a href="/login">Login</a>
 				<a href="/resgister">Register</a>
 			</div>
 			<div id="topBar" class="top">
