--- a/html/login/login.html
+++ b/html/login/login.html
@@ -9,7 +9,7 @@
 </head>
 	<body>
 		<div id="top" class="top">
-			<a href="index.html"><p id="logo">TravelA</p></a>
+			<a href="/"><p id="logo">TravelA</p></a>
 			<div id="topMini" class="top">
 				<a href="/login">Login</a>
 				<a href="/resgister">Register</a>
@@ -40,10 +40,9 @@
 									<td>PASSWORD : </td>
 									<td><input type="password" size="10" name="PASSWD"></td>
 								</tr>
-								<tr>
-									<td><input type="submit" value="로그인"></td>
-								</tr>
 							</table>
+							<br>
+							<input type="submit" value="로그인">
 						</form>
 					</div>
 				</div>
